@@ -1,3 +1,7 @@
+  * Status bar messages are now displayed properly in veritical mode.
+    The message is now truncated according to the status bar width instead
+    of the width of the terminal.
+
   * Fix spurious error from CGDB on shutdown. You may have seen,
        CGDB had unexpected results. Search the logs for more details.
     In the log there was a waitpid error. CGDB was using the API wrong.
